<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/log_out"
        android:title="@string/log_out" />

    <item
        android:id="@+id/fetch_user"
        android:title="@string/fetch_user" />

    <item
        android:id="@+id/browse_local"
        android:title="@string/browse_local" />
</menu>