<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@drawable/gradient_background"
            app:popupTheme="@style/AppTheme.PopupOverlay" >
            <com.varunest.sparkbutton.SparkButton
                android:id="@+id/hearth_button"
                android:layout_gravity="right"
                android:layout_marginRight="20dp"
                android:layout_width="30dp"
                android:layout_height="30dp"
                app:sparkbutton_activeImage="@drawable/ic_heart_on"
                app:sparkbutton_inActiveImage="@drawable/ic_heart_off"
                app:sparkbutton_iconSize="30dp"
                app:sparkbutton_primaryColor="@color/bootstrap_brand_danger"
                app:sparkbutton_secondaryColor="@color/bootstrap_brand_warning"
                tools:ignore="RtlHardcoded" />
        </android.support.v7.widget.Toolbar>

    </android.support.design.widget.AppBarLayout>

</android.support.design.widget.CoordinatorLayout>
