...
                    app:hasBorder="true"
                    card_view:layout_constraintTop_toTopOf="parent"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    card_view:layout_constraintBottom_toBottomOf="parent"
                    card_view:layout_constraintLeft_toLeftOf="parent"
                    android:id="@+id/img" />

                <FrameLayout
                    android:id="@+id/scroll_parent"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_marginBottom="8dp"
...
